samples/_failures_safe/1761696616_393cfe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9db08ee9.c: In function ‘main’:
./samples/SAFE/__tmp_9db08ee9.c:156:9: error: expected expression at end of input
  156 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_9db08ee9.c:156:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9db08ee9.c:156:9: error: expected declaration or statement at end of input
